--- a/Cinemtiyo/Info.plist
+++ b/Cinemtiyo/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The application requires your location information to show local cinema</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>The application requires your location information to show local cinema</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -57,8 +61,6 @@
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>The application requires your location information to show local cinema</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This application requires your location to give cinema information</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
